implemented simple HTML help viewer
 SVN 5831@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -338,6 +338,9 @@ docs/RemoteDebugging.txt svneol=native#text/plain
 docs/html/update_gtkintf_html.sh -text svneol=native#application/x-sh
 docs/html/update_html.sh -text svneol=native#application/x-sh
 docs/html/update_lcl_html.sh -text svneol=native#application/x-sh
+docs/images/cheetah1.png -text svneol=unset#image/png
+docs/images/laztitle.jpg -text svneol=unset#image/jpeg
+docs/index.html svneol=native#text/html
 docs/xml/lcl/actnlist.xml svneol=native#text/xml
 docs/xml/lcl/allunits.xml svneol=native#text/xml
 docs/xml/lcl/arrow.xml svneol=native#text/xml
@@ -560,9 +563,10 @@ ide/formeditor.pp svneol=native#text/pascal
 ide/frmsearch.lfm svneol=native#text/plain
 ide/frmsearch.lrs svneol=native#text/pascal
 ide/frmsearch.pas svneol=native#text/pascal
-ide/global.inc svneol=native#text/pascal
-ide/global.pp svneol=native#text/pascal
 ide/helpmanager.pas svneol=native#text/pascal
+ide/helpoptions.lfm svneol=native#text/plain
+ide/helpoptions.lrs svneol=native#text/pascal
+ide/helpoptions.pas svneol=native#text/pascal
 ide/idedefs.pas svneol=native#text/pascal
 ide/ideoptiondefs.pas svneol=native#text/pascal
 ide/ideprocs.pp svneol=native#text/pascal
@@ -647,6 +651,7 @@ ideintf/columndlg.pp svneol=native#text/pascal
 ideintf/componenteditors.pas svneol=native#text/pascal
 ideintf/componentreg.pas svneol=native#text/pascal
 ideintf/componenttreeview.pas svneol=native#text/pascal
+ideintf/configstorage.pas svneol=native#text/pascal
 ideintf/formeditingintf.pas svneol=native#text/pascal
 ideintf/graphpropedits.pas svneol=native#text/pascal
 ideintf/helphtml.pas svneol=native#text/pascal
