--- a/ideintf/Makefile.fpc
+++ b/ideintf/Makefile.fpc
@@ -21,6 +21,7 @@ implicitunits=actionseditor \
   columndlg \
   componenteditors \
   componenttreeview \
+  configstorage \
   graphpropedits \
   idecommands \
   imagelisteditor \
