implemented context help for source editor
 SVN 5836@trunk

--- a/ideintf/Makefile.fpc
+++ b/ideintf/Makefile.fpc
@@ -29,8 +29,9 @@ implicitunits=actionseditor \
   objectinspector \
   objinspstrconsts \
   propedits \
-  helpintf \
+  helpfpdoc \
   helphtml \
+  helpintf \
   texttools \
   actionseditor \
   formeditingintf \
