--- a/.gitattributes
+++ b/.gitattributes
@@ -654,6 +654,7 @@ ideintf/componenttreeview.pas svneol=native#text/pascal
 ideintf/configstorage.pas svneol=native#text/pascal
 ideintf/formeditingintf.pas svneol=native#text/pascal
 ideintf/graphpropedits.pas svneol=native#text/pascal
+ideintf/helpfpdoc.pas svneol=native#text/pascal
 ideintf/helphtml.pas svneol=native#text/pascal
 ideintf/helpintf.pas svneol=native#text/pascal
 ideintf/idecommands.pas svneol=native#text/pascal
