updated lcl fpdoc
 SVN 5845@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -341,8 +341,10 @@ docs/html/update_lcl_html.sh -text svneol=native#application/x-sh
 docs/images/cheetah1.png -text svneol=unset#image/png
 docs/images/laztitle.jpg -text svneol=unset#image/jpeg
 docs/index.html svneol=native#text/html
+docs/xml/README.txt svneol=native#text/plain
+docs/xml/find_cvs_fpdoc_files.pl -text svneol=native#application/x-perl
 docs/xml/lcl/actnlist.xml svneol=native#text/xml
-docs/xml/lcl/allunits.xml svneol=native#text/xml
+docs/xml/lcl/alllclunits.xml svneol=native#text/xml
 docs/xml/lcl/arrow.xml svneol=native#text/xml
 docs/xml/lcl/avglvltree.xml svneol=native#text/xml
 docs/xml/lcl/buttons.xml svneol=native#text/xml
@@ -354,19 +356,27 @@ docs/xml/lcl/comctrls.xml svneol=native#text/xml
 docs/xml/lcl/commctrl.xml svneol=native#text/xml
 docs/xml/lcl/controls.xml svneol=native#text/xml
 docs/xml/lcl/customtimer.xml svneol=native#text/xml
+docs/xml/lcl/dbactns.xml svneol=native#text/xml
+docs/xml/lcl/dbctrls.xml svneol=native#text/xml
+docs/xml/lcl/dbgrids.xml svneol=native#text/xml
 docs/xml/lcl/dialogs.xml svneol=native#text/xml
 docs/xml/lcl/dirsel.xml svneol=native#text/xml
 docs/xml/lcl/dynamicarray.xml svneol=native#text/xml
 docs/xml/lcl/dynhasharray.xml svneol=native#text/xml
+docs/xml/lcl/editbtn.xml svneol=native#text/xml
 docs/xml/lcl/extctrls.xml svneol=native#text/xml
+docs/xml/lcl/extdlgs.xml svneol=native#text/xml
 docs/xml/lcl/extendedstrings.xml svneol=native#text/xml
+docs/xml/lcl/extgraphics.xml svneol=native#text/xml
 docs/xml/lcl/filectrl.xml svneol=native#text/xml
 docs/xml/lcl/forms.xml svneol=native#text/xml
+docs/xml/lcl/fpcadds.xml svneol=native#text/xml
 docs/xml/lcl/graphics.xml svneol=native#text/xml
 docs/xml/lcl/graphmath.xml svneol=native#text/xml
 docs/xml/lcl/graphtype.xml svneol=native#text/xml
 docs/xml/lcl/grids.xml svneol=native#text/xml
 docs/xml/lcl/imglist.xml svneol=native#text/xml
+docs/xml/lcl/inipropstorage.xml svneol=native#text/xml
 docs/xml/lcl/interfacebase.xml svneol=native#text/xml
 docs/xml/lcl/interfaces/gtk/gdkpixbuf.xml svneol=native#text/xml
 docs/xml/lcl/interfaces/gtk/gtkdef.xml svneol=native#text/xml
@@ -378,28 +388,29 @@ docs/xml/lcl/interfaces/gtk/interfaces.xml svneol=native#text/xml
 docs/xml/lcl/interfaces/gtk/keymap.xml svneol=native#text/xml
 docs/xml/lcl/intfgraphics.xml svneol=native#text/xml
 docs/xml/lcl/lazlinkedlist.xml svneol=native#text/xml
-docs/xml/lcl/lcllinux.xml svneol=native#text/xml
+docs/xml/lcl/lclclasses.xml svneol=native#text/xml
+docs/xml/lcl/lclintf.xml svneol=native#text/xml
 docs/xml/lcl/lclmemmanager.xml svneol=native#text/xml
 docs/xml/lcl/lclproc.xml svneol=native#text/xml
+docs/xml/lcl/lclrescache.xml svneol=native#text/xml
 docs/xml/lcl/lclstrconsts.xml svneol=native#text/xml
 docs/xml/lcl/lcltype.xml svneol=native#text/xml
 docs/xml/lcl/lmessages.xml svneol=native#text/xml
 docs/xml/lcl/lresources.xml svneol=native#text/xml
 docs/xml/lcl/maskedit.xml svneol=native#text/xml
 docs/xml/lcl/menus.xml svneol=native#text/xml
-docs/xml/lcl/messages.xml svneol=native#text/xml
 docs/xml/lcl/pairsplitter.xml svneol=native#text/xml
 docs/xml/lcl/postscriptprinter.xml svneol=native#text/xml
 docs/xml/lcl/printers.xml svneol=native#text/xml
-docs/xml/lcl/registry.xml svneol=native#text/xml
+docs/xml/lcl/propertystorage.xml svneol=native#text/xml
 docs/xml/lcl/spin.xml svneol=native#text/xml
+docs/xml/lcl/stdactns.xml svneol=native#text/xml
 docs/xml/lcl/stdctrls.xml svneol=native#text/xml
 docs/xml/lcl/stringhashlist.xml svneol=native#text/xml
 docs/xml/lcl/textstrings.xml svneol=native#text/xml
 docs/xml/lcl/toolwin.xml svneol=native#text/xml
 docs/xml/lcl/utrace.xml svneol=native#text/xml
-docs/xml/lcl/vclglobals.xml svneol=native#text/xml
-docs/xml/make_all_skel.sh -text svneol=native#application/x-sh
+docs/xml/lcl/xmlpropstorage.xml svneol=native#text/xml
 docs/xml/multi_makeskel.pl -text svneol=native#application/x-perl
 examples/address_book/addrbook.dpr svneol=native#text/pascal
 examples/address_book/addrbook.lpi svneol=native#text/plain
