+ added "Images For Lazarus" package which allow handling all FCL supported Image formats
 SVN 5857@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -78,6 +78,19 @@ components/htmllite/litereadthd.pas svneol=native#text/pascal
 components/htmllite/litesbs1.pas svneol=native#text/pascal
 components/htmllite/litesubs.pas svneol=native#text/pascal
 components/htmllite/liteun2.pas svneol=native#text/pascal
+components/images/examples/README.txt svneol=native#text/plain
+components/images/examples/imagesexample.lpi svneol=native#text/plain
+components/images/examples/imagesexample.lpr svneol=native#text/pascal
+components/images/examples/lazarus.jpg -text svneol=unset#image/jpeg
+components/images/examples/mainform.lfm svneol=native#text/plain
+components/images/examples/mainform.lrs svneol=native#text/pascal
+components/images/examples/mainform.pas svneol=native#text/pascal
+components/images/imagesforlazarus.lpk svneol=native#text/pascal
+components/images/imagesforlazarus.pas svneol=native#text/pascal
+components/images/lazjpg.pas svneol=native#text/pascal
+components/images/lazpng.pas svneol=native#text/pascal
+components/images/lazpnm.pas svneol=native#text/pascal
+components/images/readme.txt svneol=native#text/plain
 components/interbase/interbaselaz.lpk svneol=native#text/pascal
 components/interbase/interbaselaz.pas svneol=native#text/pascal
 components/interbase/registerinterbase.lrs svneol=native#text/pascal
