+ added support for XPM, BMP, TGA * Fix units names * Fix example program
 SVN 5859@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -87,9 +87,12 @@ components/images/examples/mainform.lrs svneol=native#text/pascal
 components/images/examples/mainform.pas svneol=native#text/pascal
 components/images/imagesforlazarus.lpk svneol=native#text/pascal
 components/images/imagesforlazarus.pas svneol=native#text/pascal
+components/images/lazbmp.pas svneol=native#text/pascal
 components/images/lazjpg.pas svneol=native#text/pascal
 components/images/lazpng.pas svneol=native#text/pascal
 components/images/lazpnm.pas svneol=native#text/pascal
+components/images/laztga.pas svneol=native#text/pascal
+components/images/lazxpm.pas svneol=native#text/pascal
 components/images/readme.txt svneol=native#text/plain
 components/interbase/interbaselaz.lpk svneol=native#text/pascal
 components/interbase/interbaselaz.pas svneol=native#text/pascal
