--- a/components/images/examples/imagesexample.lpi
+++ b/components/images/examples/imagesexample.lpi
@@ -5,21 +5,45 @@
     <General>
       <ProjectType Value="Application"/>
       <MainUnit Value="0"/>
-      <ActiveEditorIndexAtStart Value="1"/>
+      <ActiveEditorIndexAtStart Value="0"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
-      <Title Value="jpegexample"/>
+      <Title Value="Images Example"/>
     </General>
-    <JumpHistory Count="1" HistoryIndex="0">
+    <JumpHistory Count="7" HistoryIndex="6">
       <Position1>
         <Filename Value="mainform.pas"/>
-        <Caret Line="38" Column="21" TopLine="38"/>
+        <Caret Line="35" Column="29" TopLine="24"/>
       </Position1>
+      <Position2>
+        <Filename Value="mainform.pas"/>
+        <Caret Line="61" Column="45" TopLine="51"/>
+      </Position2>
+      <Position3>
+        <Filename Value="mainform.pas"/>
+        <Caret Line="67" Column="14" TopLine="56"/>
+      </Position3>
+      <Position4>
+        <Filename Value="mainform.pas"/>
+        <Caret Line="61" Column="1" TopLine="35"/>
+      </Position4>
+      <Position5>
+        <Filename Value="mainform.pas"/>
+        <Caret Line="62" Column="10" TopLine="54"/>
+      </Position5>
+      <Position6>
+        <Filename Value="mainform.pas"/>
+        <Caret Line="146" Column="12" TopLine="120"/>
+      </Position6>
+      <Position7>
+        <Filename Value="mainform.pas"/>
+        <Caret Line="131" Column="14" TopLine="118"/>
+      </Position7>
     </JumpHistory>
     <Units Count="24">
       <Unit0>
-        <CursorPos X="65" Y="11"/>
-        <EditorIndex Value="3"/>
+        <CursorPos X="39" Y="10"/>
+        <EditorIndex Value="2"/>
         <Filename Value="imagesexample.lpr"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
@@ -28,14 +52,14 @@
         <UsageCount Value="33"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="21" Y="38"/>
+        <CursorPos X="81" Y="6"/>
         <EditorIndex Value="0"/>
         <Filename Value="mainform.pas"/>
         <ComponentName Value="ImagesExampleForm"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="mainform.lrs"/>
-        <TopLine Value="38"/>
+        <TopLine Value="1"/>
         <UnitName Value="MainForm"/>
         <UsageCount Value="33"/>
       </Unit1>
@@ -175,7 +199,7 @@
       </Unit21>
       <Unit22>
         <CursorPos X="2" Y="4"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="1"/>
         <Filename Value="README.txt"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
@@ -185,10 +209,8 @@
       </Unit22>
       <Unit23>
         <CursorPos X="1" Y="468"/>
-        <EditorIndex Value="1"/>
         <Filename Value="/home/neifer/FPC/Demo/src/lazarus/lcl/include/picture.inc"/>
-        <Loaded Value="True"/>
-        <TopLine Value="454"/>
+        <TopLine Value="1"/>
         <UsageCount Value="10"/>
       </Unit23>
     </Units>
@@ -206,11 +228,11 @@
     </RunParams>
     <RequiredPackages Count="2">
       <Item1>
-        <PackageName Value="LCL"/>
-        <MinVersion Major="1" Valid="True"/>
+        <PackageName Value="ImagesForLazarus"/>
       </Item1>
       <Item2>
-        <PackageName Value="JPEGForLazarus"/>
+        <PackageName Value="LCL"/>
+        <MinVersion Major="1" Valid="True"/>
       </Item2>
     </RequiredPackages>
   </ProjectOptions>
