--- a/.gitattributes
+++ b/.gitattributes
@@ -620,6 +620,7 @@ ide/lazarus.rc svneol=native#text/plain
 ide/lazarus_about_logo.lrs svneol=native#text/pascal
 ide/lazarus_dci.lrs svneol=native#text/pascal
 ide/lazarusidestrconsts.pas svneol=native#text/pascal
+ide/lazarusmanager.pas svneol=native#text/pascal
 ide/lazconf.pp svneol=native#text/pascal
 ide/macropromptdlg.pas svneol=native#text/pascal
 ide/main.pp svneol=native#text/pascal
@@ -661,6 +662,8 @@ ide/sourceeditprocs.pas svneol=native#text/pascal
 ide/sourcemarks.pas svneol=native#text/pascal
 ide/splash.lrs svneol=native#text/pascal
 ide/splash.pp svneol=native#text/pascal
+ide/startlazarus.lpr svneol=native#text/pascal
+ide/startlazopts.pas svneol=native#text/pascal
 ide/sysvaruseroverridedlg.pas svneol=native#text/pascal
 ide/todolist.pp svneol=native#text/pascal
 ide/transfermacros.pp svneol=native#text/pascal
