--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -97,11 +97,11 @@ idepkg:
         $(MAKE) --assume-new=lazarus.pp lazarus$(EXEEXT) OPT='$(OPT) $(LAZARUS_OPT) @$(LAZARUS_IDE_CONFIG)'
 
 #-----------------------------------------------------------------------------
-starter: lcl
+starter:
 ifeq ($(LAZARUS_OPT),)
-        $(MAKE) --assume-new=startlazarus.pp startlazarus$(EXEEXT)
+        $(MAKE) --assume-new=startlazarus.lpr startlazarus$(EXEEXT)
 else
-        $(MAKE) --assume-new=startlazarus.pp startlazarus$(EXEEXT) OPT='$(OPT) $(LAZARUS_OPT)'
+        $(MAKE) --assume-new=startlazarus.lpr startlazarus$(EXEEXT) OPT='$(OPT) $(LAZARUS_OPT)'
 endif
 
 #-----------------------------------------------------------------------------
