--- a/components/images/examples/imagesexample.lpi
+++ b/components/images/examples/imagesexample.lpi
@@ -5,75 +5,63 @@
     <General>
       <ProjectType Value="Application"/>
       <MainUnit Value="0"/>
-      <ActiveEditorIndexAtStart Value="3"/>
+      <ActiveEditorIndexAtStart Value="0"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
       <Title Value="Images Example"/>
     </General>
-    <JumpHistory Count="10" HistoryIndex="9">
+    <JumpHistory Count="7" HistoryIndex="6">
       <Position1>
         <Filename Value="mainform.pas"/>
-        <Caret Line="6" Column="81" TopLine="1"/>
+        <Caret Line="63" Column="35" TopLine="47"/>
       </Position1>
       <Position2>
-        <Filename Value="/home/neifer/FPC/Demo/src/lazarus/components/images/laztga.pas"/>
-        <Caret Line="59" Column="22" TopLine="54"/>
+        <Filename Value="mainform.pas"/>
+        <Caret Line="62" Column="3" TopLine="16"/>
       </Position2>
       <Position3>
-        <Filename Value="/home/neifer/FPC/Demo/src/lazarus/lcl/include/bitmap.inc"/>
-        <Caret Line="247" Column="1" TopLine="990"/>
+        <Filename Value="mainform.pas"/>
+        <Caret Line="47" Column="35" TopLine="34"/>
       </Position3>
       <Position4>
-        <Filename Value="/home/neifer/FPC/Demo/src/lazarus/lcl/include/bitmap.inc"/>
-        <Caret Line="910" Column="24" TopLine="897"/>
+        <Filename Value="mainform.pas"/>
+        <Caret Line="96" Column="1" TopLine="86"/>
       </Position4>
       <Position5>
-        <Filename Value="/home/neifer/FPC/Demo/src/fpc/fcl/image/fpreadtga.pp"/>
-        <Caret Line="86" Column="31" TopLine="60"/>
+        <Filename Value="mainform.pas"/>
+        <Caret Line="151" Column="1" TopLine="139"/>
       </Position5>
       <Position6>
-        <Filename Value="/home/neifer/FPC/Demo/src/fpc/fcl/image/fpreadtga.pp"/>
-        <Caret Line="154" Column="1" TopLine="140"/>
+        <Filename Value="mainform.pas"/>
+        <Caret Line="61" Column="19" TopLine="51"/>
       </Position6>
       <Position7>
-        <Filename Value="/home/neifer/FPC/Demo/src/lazarus/lcl/include/bitmap.inc"/>
-        <Caret Line="909" Column="5" TopLine="897"/>
+        <Filename Value="mainform.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
       </Position7>
-      <Position8>
-        <Filename Value="/home/neifer/FPC/Demo/src/lazarus/lcl/intfgraphics.pas"/>
-        <Caret Line="1482" Column="1" TopLine="1469"/>
-      </Position8>
-      <Position9>
-        <Filename Value="/home/neifer/FPC/Demo/src/fpc/fcl/image/fpreadtga.pp"/>
-        <Caret Line="153" Column="1" TopLine="140"/>
-      </Position9>
-      <Position10>
-        <Filename Value="/home/neifer/FPC/Demo/src/lazarus/lcl/include/bitmap.inc"/>
-        <Caret Line="847" Column="18" TopLine="833"/>
-      </Position10>
     </JumpHistory>
-    <Units Count="29">
+    <Units Count="40">
       <Unit0>
         <CursorPos X="39" Y="10"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="1"/>
         <Filename Value="imagesexample.lpr"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <TopLine Value="1"/>
         <UnitName Value="JPEGExample"/>
-        <UsageCount Value="38"/>
+        <UsageCount Value="40"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="65" Y="61"/>
+        <CursorPos X="12" Y="204"/>
         <EditorIndex Value="0"/>
         <Filename Value="mainform.pas"/>
         <ComponentName Value="ImagesExampleForm"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="mainform.lrs"/>
-        <TopLine Value="56"/>
+        <TopLine Value="179"/>
         <UnitName Value="MainForm"/>
-        <UsageCount Value="38"/>
+        <UsageCount Value="40"/>
       </Unit1>
       <Unit2>
         <CursorPos X="20" Y="156"/>
@@ -211,13 +199,11 @@
       </Unit21>
       <Unit22>
         <CursorPos X="2" Y="4"/>
-        <EditorIndex Value="6"/>
         <Filename Value="README.txt"/>
         <IsPartOfProject Value="True"/>
-        <Loaded Value="True"/>
         <SyntaxHighlighter Value="None"/>
         <TopLine Value="1"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="28"/>
       </Unit22>
       <Unit23>
         <CursorPos X="1" Y="468"/>
@@ -227,47 +213,112 @@
       </Unit23>
       <Unit24>
         <CursorPos X="31" Y="846"/>
-        <EditorIndex Value="3"/>
         <Filename Value="/home/neifer/FPC/Demo/src/lazarus/lcl/include/bitmap.inc"/>
-        <Loaded Value="True"/>
         <TopLine Value="833"/>
         <UsageCount Value="12"/>
       </Unit24>
       <Unit25>
         <CursorPos X="20" Y="52"/>
-        <EditorIndex Value="1"/>
         <Filename Value="/home/neifer/FPC/Demo/src/lazarus/components/images/laztga.pas"/>
-        <Loaded Value="True"/>
         <TopLine Value="54"/>
         <UnitName Value="LazTGA"/>
         <UsageCount Value="12"/>
       </Unit25>
       <Unit26>
         <CursorPos X="1" Y="153"/>
-        <EditorIndex Value="2"/>
         <Filename Value="/home/neifer/FPC/Demo/src/fpc/fcl/image/fpreadtga.pp"/>
-        <Loaded Value="True"/>
         <TopLine Value="140"/>
         <UnitName Value="FPReadTGA"/>
         <UsageCount Value="12"/>
       </Unit26>
       <Unit27>
         <CursorPos X="1" Y="1482"/>
-        <EditorIndex Value="4"/>
         <Filename Value="/home/neifer/FPC/Demo/src/lazarus/lcl/intfgraphics.pas"/>
-        <Loaded Value="True"/>
         <TopLine Value="1469"/>
         <UnitName Value="IntfGraphics"/>
         <UsageCount Value="12"/>
       </Unit27>
       <Unit28>
         <CursorPos X="1" Y="1469"/>
-        <EditorIndex Value="5"/>
         <Filename Value="/home/neifer/FPC/Demo/src/lazarus/lcl/interfaces/gtk/gtkobject.inc"/>
-        <Loaded Value="True"/>
         <TopLine Value="1455"/>
         <UsageCount Value="12"/>
       </Unit28>
+      <Unit29>
+        <CursorPos X="16" Y="22"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/lazarus/components/images/imagesforlazarus.pas"/>
+        <TopLine Value="1"/>
+        <UnitName Value="ImagesForLazarus"/>
+        <UsageCount Value="10"/>
+      </Unit29>
+      <Unit30>
+        <CursorPos X="68" Y="69"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/lazarus/packager/registration/lazaruspackageintf.pas"/>
+        <TopLine Value="53"/>
+        <UnitName Value="LazarusPackageIntf"/>
+        <UsageCount Value="10"/>
+      </Unit30>
+      <Unit31>
+        <CursorPos X="39" Y="699"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/lazarus/packager/packagesystem.pas"/>
+        <TopLine Value="697"/>
+        <UnitName Value="PackageSystem"/>
+        <UsageCount Value="10"/>
+      </Unit31>
+      <Unit32>
+        <CursorPos X="14" Y="70"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/lazarus/components/images/lazpnm.pas"/>
+        <TopLine Value="61"/>
+        <UnitName Value="LazPNM"/>
+        <UsageCount Value="10"/>
+      </Unit32>
+      <Unit33>
+        <CursorPos X="23" Y="463"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/lazarus/lcl/include/picture.inc"/>
+        <TopLine Value="453"/>
+        <UsageCount Value="10"/>
+      </Unit33>
+      <Unit34>
+        <CursorPos X="1" Y="1"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/lazarus/components/htmllite/lazhtmllite.lpk"/>
+        <SyntaxHighlighter Value="None"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="10"/>
+      </Unit34>
+      <Unit35>
+        <CursorPos X="51" Y="23"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/lazarus/components/htmllite/lazhtmllite.pas"/>
+        <TopLine Value="1"/>
+        <UnitName Value="LazHTMLLite"/>
+        <UsageCount Value="10"/>
+      </Unit35>
+      <Unit36>
+        <CursorPos X="1" Y="1"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/lazarus/components/htmllite/htmllite.pas"/>
+        <TopLine Value="2945"/>
+        <UnitName Value="HTMLLite"/>
+        <UsageCount Value="10"/>
+      </Unit36>
+      <Unit37>
+        <CursorPos X="1" Y="1"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/lazarus/components/htmllite/htmllite.dcr"/>
+        <SyntaxHighlighter Value="None"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="10"/>
+      </Unit37>
+      <Unit38>
+        <CursorPos X="1" Y="1"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/lazarus/components/memds/memdslaz.pas"/>
+        <TopLine Value="1"/>
+        <UnitName Value="MemDSLaz"/>
+        <UsageCount Value="10"/>
+      </Unit38>
+      <Unit39>
+        <CursorPos X="1" Y="1"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/lazarus/components/memds/memdsicons.lrs"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="10"/>
+      </Unit39>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
@@ -300,12 +351,17 @@
     <CodeGeneration>
       <Generate Value="Faster"/>
     </CodeGeneration>
+    <Linking>
+      <Debugging>
+        <GenerateDebugInfo Value="True"/>
+      </Debugging>
+    </Linking>
     <Other>
       <CompilerPath Value="$(CompPath)"/>
     </Other>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="3">
+    <BreakPoints Count="5">
       <Item1>
         <Source Value="/home/satan/pascal/lazarus/lcl/interfaces/gtk2/gtk2int.pas"/>
         <Line Value="34"/>
@@ -318,6 +374,14 @@
         <Source Value="/home/neifer/FPC/Demo/src/fpc/fcl/image/fpreadtga.pp"/>
         <Line Value="153"/>
       </Item3>
+      <Item4>
+        <Source Value="/home/mazen/FPC/Demo/src/lazarus/packager/packagesystem.pas"/>
+        <Line Value="702"/>
+      </Item4>
+      <Item5>
+        <Source Value="/home/mazen/FPC/Demo/src/lazarus/packager/registration/lazaruspackageintf.pas"/>
+        <Line Value="69"/>
+      </Item5>
     </BreakPoints>
   </Debugging>
 </CONFIG>
