--- a/.gitattributes
+++ b/.gitattributes
@@ -694,6 +694,7 @@ ideintf/listviewpropedit.pp svneol=native#text/pascal
 ideintf/objectinspector.pp svneol=native#text/pascal
 ideintf/objinspstrconsts.pas svneol=native#text/pascal
 ideintf/packageintf.pas svneol=native#text/pascal
+ideintf/projectintf.pas svneol=native#text/pascal
 ideintf/propedits.pp svneol=native#text/pascal
 ideintf/srceditorintf.pas svneol=native#text/pascal
 ideintf/texttools.pas svneol=native#text/pascal
