--- a/.gitattributes
+++ b/.gitattributes
@@ -556,6 +556,7 @@ ide/codetoolsdefpreview.pas svneol=native#text/pascal
 ide/codetoolsoptions.pas svneol=native#text/pascal
 ide/compiler.pp svneol=native#text/pascal
 ide/compileroptions.pp svneol=native#text/pascal
+ide/compileroptionsdlg.pp svneol=native#text/pascal
 ide/componentpalette.pas svneol=native#text/pascal
 ide/condef.lfm svneol=native#text/plain
 ide/condef.lrs svneol=native#text/pascal
