--- a/.gitattributes
+++ b/.gitattributes
@@ -1245,6 +1245,14 @@ lcl/include/winapih.inc svneol=native#text/pascal
 lcl/include/wincontrol.inc svneol=native#text/pascal
 lcl/inipropstorage.pas svneol=native#text/pascal
 lcl/interfacebase.pp svneol=native#text/pascal
+lcl/interfaces/carbon/carbonimages.lrs svneol=native#text/pascal
+lcl/interfaces/carbon/carbonint.pas svneol=native#text/pascal
+lcl/interfaces/carbon/carbonlclintf.inc svneol=native#text/pascal
+lcl/interfaces/carbon/carbonlclintfh.inc svneol=native#text/pascal
+lcl/interfaces/carbon/carbonobject.inc svneol=native#text/pascal
+lcl/interfaces/carbon/carbonwinapi.inc svneol=native#text/pascal
+lcl/interfaces/carbon/carbonwinapih.inc svneol=native#text/pascal
+lcl/interfaces/carbon/interfaces.pas svneol=native#text/pascal
 lcl/interfaces/gnome/gnomeint.pp svneol=native#text/pascal
 lcl/interfaces/gnome/gnomelclintf.inc svneol=native#text/pascal
 lcl/interfaces/gnome/gnomelclintfh.inc svneol=native#text/pascal
