--- a/.gitattributes
+++ b/.gitattributes
@@ -1232,6 +1232,7 @@ lcl/include/spinedit.inc svneol=native#text/pascal
 lcl/include/statusbar.inc svneol=native#text/pascal
 lcl/include/statuspanel.inc svneol=native#text/pascal
 lcl/include/statuspanels.inc svneol=native#text/pascal
+lcl/include/tabcontrol.inc svneol=native#text/pascal
 lcl/include/tabsheet.inc svneol=native#text/pascal
 lcl/include/timer.inc svneol=native#text/pascal
 lcl/include/togglebox.inc svneol=native#text/pascal
