started new feature: find identifier references
 SVN 6022@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -587,6 +587,9 @@ ide/exttooldialog.pas svneol=native#text/pascal
 ide/exttooleditdlg.pas svneol=native#text/pascal
 ide/filereferencelist.pas svneol=native#text/pascal
 ide/findinfilesdlg.pas svneol=native#text/pascal
+ide/findrenameidentifier.lfm svneol=native#text/plain
+ide/findrenameidentifier.lrs svneol=native#text/pascal
+ide/findrenameidentifier.pas svneol=native#text/pascal
 ide/findreplacedialog.pp svneol=native#text/pascal
 ide/formeditor.pp svneol=native#text/pascal
 ide/frmsearch.lfm svneol=native#text/plain
