--- a/.gitattributes
+++ b/.gitattributes
@@ -1536,6 +1536,9 @@ packager/packagesystem.pas svneol=native#text/pascal
 packager/pkggraphexplorer.pas svneol=native#text/pascal
 packager/pkgmanager.pas svneol=native#text/pascal
 packager/pkgoptionsdlg.pas svneol=native#text/pascal
+packager/pkgvirtualuniteditor.lfm svneol=native#text/plain
+packager/pkgvirtualuniteditor.lrs svneol=native#text/pascal
+packager/pkgvirtualuniteditor.pas svneol=native#text/pascal
 packager/registerfcl.pas svneol=native#text/pascal
 packager/registerideintf.pas svneol=native#text/pascal
 packager/registerlcl.pas svneol=native#text/pascal
