--- a/.gitattributes
+++ b/.gitattributes
@@ -439,6 +439,11 @@ examples/address_book/mybook.dbf svneol=native#unset
 examples/address_book/mybook.mdx svneol=native#unset
 examples/address_book/mybook2.dbf svneol=native#unset
 examples/address_book/mybook2.mdx svneol=native#unset
+examples/barchart/chartdemo.lpi svneol=native#text/plain
+examples/barchart/chartdemo.lpr svneol=native#text/pascal
+examples/barchart/frmmain.lfm svneol=native#text/plain
+examples/barchart/frmmain.lrs svneol=native#text/pascal
+examples/barchart/frmmain.pas svneol=native#text/pascal
 examples/bitbtnform.pp svneol=native#text/pascal
 examples/bitbutton.pp svneol=native#text/pascal
 examples/checkbox.pp svneol=native#text/pascal
