splitted off unit FileUtil, it doesn't depend on other LCL units
 SVN 6080@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1088,6 +1088,7 @@ lcl/extdlgs.pas svneol=native#text/pascal
 lcl/extendedstrings.pas svneol=native#text/pascal
 lcl/extgraphics.pas svneol=native#text/pascal
 lcl/filectrl.pp svneol=native#text/pascal
+lcl/fileutil.pas svneol=native#text/pascal
 lcl/forms.pp svneol=native#text/pascal
 lcl/fpcadds.pas svneol=native#text/pascal
 lcl/graphics.pp svneol=native#text/pascal
