--- a/.gitattributes
+++ b/.gitattributes
@@ -1183,8 +1183,8 @@ lcl/include/dockzone.inc svneol=native#text/pascal
 lcl/include/dragdock.inc svneol=native#text/pascal
 lcl/include/dragobject.inc svneol=native#text/pascal
 lcl/include/edit.inc svneol=native#text/pascal
-lcl/include/filectrl.inc svneol=native#text/pascal
 lcl/include/filedialog.inc svneol=native#text/pascal
+lcl/include/fileutil.inc svneol=native#text/pascal
 lcl/include/font.inc svneol=native#text/pascal
 lcl/include/fontdialog.inc svneol=native#text/pascal
 lcl/include/graphic.inc svneol=native#text/pascal
