--- a/.gitattributes
+++ b/.gitattributes
@@ -1590,6 +1590,7 @@ tools/install/smart_strip.sh -text svneol=native#application/x-sh
 tools/install/win32/build-fpc.bat -text svneol=native#application/x-msdos-program
 tools/install/win32/build-lazarus.bat -text svneol=native#application/x-msdos-program
 tools/install/win32/create_installer.bat -text svneol=native#application/x-msdos-program
+tools/install/win32/editoroptions.xml svneol=native#text/xml
 tools/install/win32/environmentoptions.xml svneol=native#text/xml
 tools/install/win32/readme.txt svneol=native#text/plain
 tools/lazarusmake.ini svneol=native#text/plain
