--- a/.gitattributes
+++ b/.gitattributes
@@ -672,6 +672,7 @@ ide/sourcemarks.pas svneol=native#text/pascal
 ide/splash.lrs svneol=native#text/pascal
 ide/splash.pp svneol=native#text/pascal
 ide/startlazarus.lpr svneol=native#text/pascal
+ide/startlazarus.rc svneol=native#text/plain
 ide/startlazopts.pas svneol=native#text/pascal
 ide/sysvaruseroverridedlg.pas svneol=native#text/pascal
 ide/todolist.pp svneol=native#text/pascal
