--- a/.gitattributes
+++ b/.gitattributes
@@ -502,6 +502,11 @@ examples/objectinspector/mainunit.lrs svneol=native#text/pascal
 examples/objectinspector/mainunit.pas svneol=native#text/pascal
 examples/objectinspector/oiexample.lpi svneol=native#text/plain
 examples/objectinspector/oiexample.lpr svneol=native#text/pascal
+examples/postscript/samplepostscriptcanvas.lpi svneol=native#text/plain
+examples/postscript/samplepostscriptcanvas.lpr svneol=native#text/pascal
+examples/postscript/usamplepostscriptcanvas.lfm svneol=native#text/plain
+examples/postscript/usamplepostscriptcanvas.lrs svneol=native#text/pascal
+examples/postscript/usamplepostscriptcanvas.pas svneol=native#text/pascal
 examples/progressbar.pp svneol=native#text/pascal
 examples/scrollbar.pp svneol=native#text/pascal
 examples/selection.pp svneol=native#text/pascal
