--- a/examples/turbopower_ipro/tpiproexample.lpi
+++ b/examples/turbopower_ipro/tpiproexample.lpi
@@ -1,20 +1,73 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="3"/>
+    <Version Value="5"/>
     <General>
-      <ProjectType Value="Application"/>
-      <Flags>
-        <SaveClosedFiles Value="False"/>
-        <SaveOnlyProjectUnits Value="True"/>
-      </Flags>
       <MainUnit Value="0"/>
-      <ActiveEditorIndexAtStart Value="0"/>
+      <ActiveEditorIndexAtStart Value="3"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
       <Title Value="tpiproexample"/>
     </General>
-    <Units Count="3">
+    <JumpHistory Count="14" HistoryIndex="9">
+      <Position1>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/iputils.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
+      </Position1>
+      <Position2>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/iputils.pas"/>
+        <Caret Line="2672" Column="11" TopLine="2648"/>
+      </Position2>
+      <Position3>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/iputils.pas"/>
+        <Caret Line="44" Column="11" TopLine="1"/>
+      </Position3>
+      <Position4>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/iphtml.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
+      </Position4>
+      <Position5>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/iputils.pas"/>
+        <Caret Line="2689" Column="19" TopLine="2667"/>
+      </Position5>
+      <Position6>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/ipstrms.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
+      </Position6>
+      <Position7>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/ipstrms.pas"/>
+        <Caret Line="428" Column="1" TopLine="390"/>
+      </Position7>
+      <Position8>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/ipstrms.pas"/>
+        <Caret Line="387" Column="3" TopLine="365"/>
+      </Position8>
+      <Position9>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/ipstrms.pas"/>
+        <Caret Line="481" Column="1" TopLine="438"/>
+      </Position9>
+      <Position10>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/ipstrms.pas"/>
+        <Caret Line="433" Column="3" TopLine="411"/>
+      </Position10>
+      <Position11>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/iphtml.pas"/>
+        <Caret Line="2944" Column="3" TopLine="2920"/>
+      </Position11>
+      <Position12>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/iphtml.pas"/>
+        <Caret Line="17646" Column="33" TopLine="17607"/>
+      </Position12>
+      <Position13>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/ipstrms.pas"/>
+        <Caret Line="434" Column="3" TopLine="412"/>
+      </Position13>
+      <Position14>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/iphtml.pas"/>
+        <Caret Line="16503" Column="1" TopLine="16503"/>
+      </Position14>
+    </JumpHistory>
+    <Units Count="9">
       <Unit0>
         <CursorPos X="5" Y="6"/>
         <Filename Value="tpiproexample.lpr"/>
@@ -24,14 +77,14 @@
         <UsageCount Value="25"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="15" Y="81"/>
+        <CursorPos X="11" Y="72"/>
         <EditorIndex Value="0"/>
         <Filename Value="mainunit.pas"/>
         <ComponentName Value="MainForm"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="mainunit.lrs"/>
-        <TopLine Value="54"/>
+        <TopLine Value="51"/>
         <UnitName Value="MainUnit"/>
         <UsageCount Value="25"/>
       </Unit1>
@@ -43,6 +96,59 @@
         <TopLine Value="1"/>
         <UsageCount Value="25"/>
       </Unit2>
+      <Unit3>
+        <CursorPos X="28" Y="519"/>
+        <EditorIndex Value="1"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/iputils.pas"/>
+        <Loaded Value="True"/>
+        <TopLine Value="485"/>
+        <UnitName Value="IpUtils"/>
+        <UsageCount Value="10"/>
+      </Unit3>
+      <Unit4>
+        <CursorPos X="1" Y="29"/>
+        <EditorIndex Value="6"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/fileutil.pas"/>
+        <Loaded Value="True"/>
+        <TopLine Value="1"/>
+        <UnitName Value="FileUtil"/>
+        <UsageCount Value="10"/>
+      </Unit4>
+      <Unit5>
+        <CursorPos X="1" Y="2991"/>
+        <EditorIndex Value="3"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/iphtml.pas"/>
+        <Loaded Value="True"/>
+        <TopLine Value="2964"/>
+        <UnitName Value="IpHtml"/>
+        <UsageCount Value="10"/>
+      </Unit5>
+      <Unit6>
+        <CursorPos X="3" Y="434"/>
+        <EditorIndex Value="2"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/turbopower_ipro/ipstrms.pas"/>
+        <Loaded Value="True"/>
+        <TopLine Value="412"/>
+        <UnitName Value="IpStrms"/>
+        <UsageCount Value="10"/>
+      </Unit6>
+      <Unit7>
+        <CursorPos X="15" Y="820"/>
+        <EditorIndex Value="4"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/stdctrls.pp"/>
+        <Loaded Value="True"/>
+        <TopLine Value="798"/>
+        <UnitName Value="StdCtrls"/>
+        <UsageCount Value="10"/>
+      </Unit7>
+      <Unit8>
+        <CursorPos X="3" Y="142"/>
+        <EditorIndex Value="5"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/customcheckbox.inc"/>
+        <Loaded Value="True"/>
+        <TopLine Value="131"/>
+        <UsageCount Value="10"/>
+      </Unit8>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
