Changes due to the new fpc unit directory structure.
 SVN 6208@trunk

--- a/tools/install/win32/samplefpc.cfg
+++ b/tools/install/win32/samplefpc.cfg
@@ -124,16 +124,16 @@
 #-Fo$1/source/rtl/inc;$1/source/rtl/i386
 
 # searchpath for units and other system dependent things
--Fu$1/units/$TARGET
--Fu$1/units/$TARGET/*
--Fu$1/units/$TARGET/rtl
+-Fu$1/units/$FPCTARGET
+-Fu$1/units/$FPCTARGET/*
+-Fu$1/units/$FPCTARGET/rtl
 
 # searchpath for libraries
 #-Fl$1/lib
 #-Fl/lib;/usr/lib
 
 # searchpath for tools
--FD$1/bin/$TARGET
+-FD$1/bin/$FPCTARGET
 
 # -------------
 # Linking
