increased rpm version to 0.9.2.3
 SVN 6231@trunk

--- a/install/gnome.ide.desktop
+++ b/install/gnome.ide.desktop
@@ -7,6 +7,7 @@ Name[da]=Lazarus
 Name[de]=Lazarus
 Name[el]=Lazarus
 Name[es]=Lazarus
+Name[fi]=Lazarus
 Name[fr]=Lazarus
 Name[ga]=Lazarus
 Name[hu]=Lazarus
@@ -28,7 +29,12 @@ Name[tr]=Lazarus
 Name[uk]=Lazarus
 Name[zh_CN]=Lazarus
 Comment=Lazarus IDE
-Exec=lazarus
+Exec=lazarus %f
 Terminal=0
 Type=Application
 Icon=lazarus.png
+Encoding=UTF-8
+Categories=IDE;Development;X-Red-Hat-Base;Application;
+StartupWMClass=Lazarus
+MimeType=text/x-pascal;
+
