add images for lazarus files   from Razvan
 SVN 6252@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -714,6 +714,11 @@ ideintf/projectintf.pas svneol=native#text/pascal
 ideintf/propedits.pp svneol=native#text/pascal
 ideintf/srceditorintf.pas svneol=native#text/pascal
 ideintf/texttools.pas svneol=native#text/pascal
+images/LazarusForm.bmp -text svneol=unset#image/bmp
+images/LazarusForm.ico -text svneol=unset#image/x-icon
+images/LazarusProject.ico -text svneol=unset#image/x-icon
+images/LazarusSource.bmp -text svneol=unset#image/bmp
+images/LazarusSource.ico -text svneol=unset#image/x-icon
 images/bookmark.lrs svneol=native#text/pascal
 images/btn_downarrow.ico -text svneol=unset#image/x-icon
 images/btn_downarrow.xpm -text svneol=native#image/x-xpixmap
