+ Added Evaluate/Modify dialog
 SVN 6287@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -303,6 +303,9 @@ debugger/dbgoutputform.pp svneol=native#text/pascal
 debugger/dbgutils.pp svneol=native#text/pascal
 debugger/debugger.pp svneol=native#text/pascal
 debugger/debuggerdlg.pp svneol=native#text/pascal
+debugger/evaluatedlg.lfm svneol=native#text/plain
+debugger/evaluatedlg.lrs svneol=native#text/pascal
+debugger/evaluatedlg.pp svneol=native#text/pascal
 debugger/gdbdebugger.pp svneol=native#text/pascal
 debugger/gdbmidebugger.pp svneol=native#text/pascal
 debugger/gdbtypeinfo.pp svneol=native#text/pascal
