replaced mysqllaz package with mysql3laz and mysql4laz
 SVN 6311@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -127,8 +127,11 @@ components/memds/memdslaz.lpk svneol=native#text/pascal
 components/memds/memdslaz.pas svneol=native#text/pascal
 components/memds/tmemdataset.xpm -text svneol=native#image/x-xpixmap
 components/mpaslex/mpaslex.pp svneol=native#text/pascal
-components/mysql/mysqllaz.lpk svneol=native#text/pascal
-components/mysql/mysqllaz.pas svneol=native#text/pascal
+components/mysql/README.txt svneol=native#text/plain
+components/mysql/mysql3laz.lpk svneol=native#text/pascal
+components/mysql/mysql3laz.pas svneol=native#text/pascal
+components/mysql/mysql4laz.lpk svneol=native#text/pascal
+components/mysql/mysql4laz.pas svneol=native#text/pascal
 components/mysql/registermysql.lrs svneol=native#text/pascal
 components/mysql/registermysql.pas svneol=native#text/pascal
 components/mysql/tmysqldatabase.xpm -text svneol=native#image/x-xpixmap
