added fpcunit test runner and fpcunit test runner ide package
 SVN 6314@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -61,6 +61,17 @@ components/codetools/resourcecodetool.pas svneol=native#text/pascal
 components/codetools/sourcechanger.pas svneol=native#text/pascal
 components/codetools/sourcelog.pas svneol=native#text/pascal
 components/codetools/stdcodetools.pas svneol=native#text/pascal
+components/fpcunit/fpcunittestrunner.lpk svneol=native#text/pascal
+components/fpcunit/fpcunittestrunner.pas svneol=native#text/pascal
+components/fpcunit/guitestrunner.lfm svneol=native#text/plain
+components/fpcunit/guitestrunner.lrs svneol=native#text/pascal
+components/fpcunit/guitestrunner.pas svneol=native#text/pascal
+components/fpcunit/ide/README.txt svneol=native#text/plain
+components/fpcunit/ide/fpcunitide.lpk svneol=native#text/pascal
+components/fpcunit/ide/fpcunitide.pas svneol=native#text/pascal
+components/fpcunit/ide/fpcunitlazideintf.pas svneol=native#text/pascal
+components/fpcunit/ide/lib/README.txt svneol=native#text/plain
+components/fpcunit/lib/README.txt svneol=native#text/plain
 components/gtk/gtkglarea/gtkglarea.lrs svneol=native#text/pascal
 components/gtk/gtkglarea/gtkglarea_int.pp svneol=native#text/pascal
 components/gtk/gtkglarea/gtkglareacontrol.pas svneol=native#text/pascal
