added missing xml lcl files
 SVN 6318@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -387,6 +387,7 @@ docs/xml/lcl/arrow.xml svneol=native#text/xml
 docs/xml/lcl/avglvltree.xml svneol=native#text/xml
 docs/xml/lcl/buttons.xml svneol=native#text/xml
 docs/xml/lcl/calendar.xml svneol=native#text/xml
+docs/xml/lcl/chart.xml svneol=native#text/xml
 docs/xml/lcl/checklst.xml svneol=native#text/xml
 docs/xml/lcl/clipbrd.xml svneol=native#text/xml
 docs/xml/lcl/clistbox.xml svneol=native#text/xml
@@ -407,6 +408,7 @@ docs/xml/lcl/extdlgs.xml svneol=native#text/xml
 docs/xml/lcl/extendedstrings.xml svneol=native#text/xml
 docs/xml/lcl/extgraphics.xml svneol=native#text/xml
 docs/xml/lcl/filectrl.xml svneol=native#text/xml
+docs/xml/lcl/fileutil.xml svneol=native#text/xml
 docs/xml/lcl/forms.xml svneol=native#text/xml
 docs/xml/lcl/fpcadds.xml svneol=native#text/xml
 docs/xml/lcl/graphics.xml svneol=native#text/xml
@@ -463,6 +465,7 @@ docs/xml/lcl/lresources.xml svneol=native#text/xml
 docs/xml/lcl/maskedit.xml svneol=native#text/xml
 docs/xml/lcl/menus.xml svneol=native#text/xml
 docs/xml/lcl/pairsplitter.xml svneol=native#text/xml
+docs/xml/lcl/postscriptcanvas.xml svneol=native#text/xml
 docs/xml/lcl/postscriptprinter.xml svneol=native#text/xml
 docs/xml/lcl/printers.xml svneol=native#text/xml
 docs/xml/lcl/propertystorage.xml svneol=native#text/xml
