added example for converting special characters of lazarus projects
 SVN 6322@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -497,6 +497,14 @@ examples/barchart/frmmain.pas svneol=native#text/pascal
 examples/bitbtnform.pp svneol=native#text/pascal
 examples/bitbutton.pp svneol=native#text/pascal
 examples/checkbox.pp svneol=native#text/pascal
+examples/codepageconverter/codepages.ini svneol=native#text/plain
+examples/codepageconverter/filefind/filefind.pas svneol=native#text/pascal
+examples/codepageconverter/filefind/filefindlaz.lpk svneol=native#text/pascal
+examples/codepageconverter/lazconverter.lpi svneol=native#text/plain
+examples/codepageconverter/lazconverter.lpr svneol=native#text/pascal
+examples/codepageconverter/mainunit.lfm svneol=native#text/plain
+examples/codepageconverter/mainunit.lrs svneol=native#text/pascal
+examples/codepageconverter/mainunit.pas svneol=native#text/pascal
 examples/combobox.pp svneol=native#text/pascal
 examples/comdialogs.pp svneol=native#text/pascal
 examples/dlgform.pp svneol=native#text/pascal
