--- a/.gitattributes
+++ b/.gitattributes
@@ -1637,6 +1637,8 @@ tools/apiwizz/apiwizz.pp svneol=native#text/pascal
 tools/check_ide_libs.sh -text svneol=native#application/x-sh
 tools/copy_po_files_to_lazarus_sources.sh -text svneol=native#application/x-sh
 tools/cvs2cl.pl -text svneol=native#application/x-perl
+tools/delete_non_cvs_files.pl -text svneol=native#application/x-perl
+tools/find_non_cvs_files.pl -text svneol=native#application/x-perl
 tools/getallmofiles.sh -text svneol=native#application/x-sh
 tools/getallpofiles.sh -text svneol=native#application/x-sh
 tools/install/build_fpc_rpm.sh -text svneol=native#application/x-sh
